# redis-agent-worker

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  NIX_SETUP.md  README.md  build.rs  docker-compose.yml  flake.nix  redis-agent-worker.service  run_tests.sh
.github/workflows/: ci.yml
guest/: Cargo.toml  build.sh
guest/src/: lib.rs
src/: agent.rs  git.rs  guest_binary.rs  instance.rs  lib.rs  main.rs  queue.rs  worker.rs
tests/: README.md  e2e_test.rs  error_handling_test.rs  integration_test.rs
tests/common/: mod.rs
