[package]
name = "redis-agent-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
git2 = "0.20"

# Hyperlight for secure guest execution
hyperlight-host = { git = "https://github.com/hyperlight-dev/hyperlight.git" }
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight.git" }

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.10", features = ["redis"] }
axum = "0.7"
tower = "0.4"
tempfile = "3.8"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
tokio-test = "0.4"
assert_fs = "1.1"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
