[package]
name = "agent-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
# Note: AgentAI requires std, but hyperlight guests run in no_std
# We'll implement agent logic using host function calls for I/O
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Hyperlight guest libraries
hyperlight-guest = { git = "https://github.com/hyperlight-dev/hyperlight.git" }
hyperlight-guest-bin = { git = "https://github.com/hyperlight-dev/hyperlight.git" }
hyperlight-common = { git = "https://github.com/hyperlight-dev/hyperlight.git", default-features = false }
log = { version = "0.4", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
panic = "abort"
codegen-units = 1
